# dlmem

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/benchmarks/: longmemeval.yaml
configs/experiments/: exp_longmemeval_dream_full.yaml  exp_longmemeval_s_cleaned_dream_full.yaml  exp_longmemeval_s_smoke_dream_tiny.yaml  exp_longmemeval_tiny_toy_dream_tiny.yaml
configs/memory/: full_context.yaml
configs/models/: dream.yaml
plan/: macro-plan.md
src/benchmarks/: base_benchmark.py
src/benchmarks/longmemeval/: adapter.py  evaluator.py
src/cli/: run_eval.py  score_eval.py
src/core/: runner.py  types.py
src/memory/: base_memory.py  full_context.py
src/models/: base_model.py  dream_model.py
src/utils/: io.py
